# solanaceae_message_n10n

./: .gitignore  CMakeLists.txt
.github/workflows/: cd.yml  ci.yml
plugins/: CMakeLists.txt  plugin_message_n10n.cpp
src/: CMakeLists.txt  message_n10n.cpp  message_n10n.hpp  message_n10n_dbus.cpp
src/dbus/: CMakeLists.txt  org.freedesktop.Notifications.xml  org_freedesktop_NotificationsProxy.cpp  org_freedesktop_NotificationsProxy.h
